--- a/css/variables.css
+++ b/css/variables.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@500;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap⁩');
 
 :root {
@@ -7,11 +7,11 @@
     --bgColorHeader: #F8EDCA;
     --bgColorNav: #E8D285;
 
-    --accentRed: #FE4C61;
+    --accentRed: #a80a1c;
     --accentBlue: #0038A8;
     --gray: #D3D3D3;
 
     /* fonts */
-    --headerFont: "Nunito Sans", sans-serif;
-    --textFont: "Roboto", sans-serif;
+    --headerFont: "Nunito Sans", Helvetica, sans-serif;
+    --textFont: "Roboto", Helvetica, sans-serif;
 }
